# lightpanel

./: .env.example  .gitignore  DESIGN.md  README.md  ROADMAP.md  SECURITY.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/config/: loader.rs  mod.rs  paths.rs
backend/src/core/: error.rs  mod.rs  response.rs  state.rs
backend/src/db/: connection.rs  migrations.rs
backend/src/models/: app.rs  audit_log.rs  database_connection.rs  deployment.rs  domain.rs  env_var.rs  mod.rs  runtime.rs  server_identity.rs  setting.rs
backend/src/routes/: apps.rs  dashboard.rs  databases.rs  health.rs  logs.rs  mod.rs  security.rs  settings.rs
backend/src/security/: csrf.rs  mod.rs  password.rs  rate_limit.rs  session.rs  validation.rs
backend/src/services/: apps.rs  apps_validation.rs  mod.rs
backend/src/services/dashboard/: mod.rs  resource_usage.rs  runtime_detector.rs  server_identity.rs
backend/src/services/database_manager/: mod.rs  mysql.rs  postgres.rs  sqlite.rs  sqlserver.rs
backend/src/services/deployment/: app_paths.rs  engine.rs  mod.rs  release_manager.rs  start_script.rs  status.rs
backend/src/services/deployment/adapters/: go.rs  (+10 more)
backend/src/services/firewall/: mod.rs  ufw.rs
backend/src/services/logs/: audit_log.rs  deploy_log.rs  journal.rs  mod.rs
backend/src/services/nginx/: config_generator.rs  mod.rs  nginx_control.rs  site_config.rs
backend/src/services/ssl/: acme.rs  mod.rs
backend/src/services/systemd/: mod.rs  service_control.rs  unit.rs  unit_generator.rs
backend/src/utils/: command.rs  fs.rs  mod.rs  path.rs  process.rs
(+61 files in other folders)
